# store

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  store.db
alembic/: env.py
alembic/versions/: 1b3b9b5284cc_add_cons_to_product.py  56391851aa49_add_order_table.py  e0c528608faa_add_order_status.py  f9e95d0679f0_add_cons_to_product.py
app/: __init__.py  database.py  email_utils.py  main.py  models.py  schemas.py
app/views/: pages.py  products.py  reviews.py
static/: main.js  payment.js
templates/: _cta.html  _faq.html  _features.html  _footer.html  _header.html  _hero.html  _howitworks.html  _payment_form.html  _plans.html  _processing.html  _reviews.html  base.html  buy.html  index.html  test.html
