[project]
name = "store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "celery>=5.5.3",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
